add-some-dets233

--- a/config.yml
+++ b/config.yml
@@ -11,6 +11,7 @@ params:
   homeInfoParams:
     Title: "Some data guy"
     Content: >
+    ![sample](muizz.JPG)
       Welcome to the **Random musings of a data guy** 🎉
 
       - 
