--- a/config.yml
+++ b/config.yml
@@ -7,7 +7,7 @@ theme: PaperMod
 enableEmoji: true
 
 params:
-  author: Muizz Kp
+  author: Muizz Kolapo
   homeInfoParams:
     Title: "Some data guy"
     Content: >
